--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,7 @@
     ],
     "require": {
 		"php": ">=5.4",
-        "illuminate/support": "5.*"
-    },
-	"require-dev": {
-		"phpunit/phpunit": "5.2.*"
+        "illuminate/support": "^5.3||^6.0"
     },
 	"autoload": {
         "psr-4": {
