--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
 		"php": ">=5.4",
-        "illuminate/support": "^5.3||^6.0"
+        "illuminate/support": "^5.3||^6.0||^7.0"
     },
 	"autoload": {
         "psr-4": {
